# yamlagent

./: .gitignore  README.md  playfile.yaml  pyproject.toml
.play/: agents.yaml  tools.yaml
.play/agents/: coder.md  documenter.md  monorepo-navigator.md  reviewer.md  test-writer.md
examples/: .gitignore
examples/.play/: agents.yaml  tools.yaml
examples/calc3d/: .gitignore  README.md  generate_sounds.py  playfile.yaml  pyproject.toml  pytest.ini  test_audio.py
examples/calc3d/.play/agents/: architect.md  coder.md  common.md  debugger.md  reviewer.md  tester.md
examples/calc3d/.play/project/: guidelines.md  overview.md
examples/calc3d/src/calc3d/: __init__.py  app.py
examples/calc3d/src/calc3d/static/css/: style.css
examples/calc3d/src/calc3d/static/js/: audio-manager.js  calculator-engine.js  calculator.js  config.js  display-manager.js  effects.js  event-manager.js  input-handler.js  scene3d.js
examples/calc3d/src/calc3d/templates/: index.html
examples/calc3d/src/calculator_3d/: main.py
examples/calc3d/src/calculator_3d/static/css/: .gitkeep  style.css
examples/calc3d/src/calculator_3d/static/js/: .gitkeep  calculator.js
examples/calc3d/src/calculator_3d/templates/: index.html
examples/calc3d/tests/: __init__.py  calculator_logic.py  conftest.py  test_api.py  test_audio_files.py  test_calculator_logic.py  test_generate_sounds.py  test_main.py
examples/project/: .gitignore  README.md  SOUND_FEATURES.md  TESTING.md  TEST_REPORT.md  playfile.yaml  project.md  pyproject.toml
examples/project/.play/: agents.yaml  project.md  tools.yaml
examples/project/.play/agents/: debugger.md  product-owner.md  reviewer.md  tester.md
examples/project/.play/project/: guidelines.md  overview.md
examples/project/src/calc3d/: __init__.py  __main__.py  app.py  calculator.py
examples/project/src/calc3d/static/css/: style.css
examples/project/src/calc3d/static/js/: app.js  audio.js
examples/project/src/calc3d/templates/: index.html
examples/project/src/calculator_3d/: __init__.py  app.py
examples/project/src/calculator_3d/static/css/: style.css
examples/project/src/calculator_3d/static/js/: calculator.js
examples/project/src/calculator_3d/templates/: index.html
examples/project/src/myproject/: __init__.py  __main__.py
examples/project/src/project/: __init__.py  __main__.py
examples/project/tests/: __init__.py  test_app.py  test_calculator.py  test_example.py  test_main.py
examples/simple/: README.md  playfile.yaml
src/yamlagent/: __init__.py  cli.py
