[project]
name = "calc3d"
version = "0.1.0"
description = "A beautiful 3D calculator web application"
readme = "README.md"
authors = [
    { name = "Sofiane Djerbi", email = "sofiane.djerbi38@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",  # Required for TestClient
]

[project.scripts]
calc3d = "calc3d:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
